--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -65,6 +65,7 @@
     }
     .footer-wraper p {
         font-size: 1.2rem;
+        width: 90%;
     }
     .footer-absulute {
         top: 150px;
@@ -122,7 +123,7 @@
         margin-left: 20px;
     }
     .form-img {
-        height: 560px;
+        height: 600px;
     }
     .form-field {
         padding: 10px;
